# antigravity-sdk

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  main.py  pyproject.toml
examples/: __init__.py  basic_test.py  custom_tools.py
projects/data_analyst/: README.md  main.py
projects/data_analyst/data/: sample.csv
projects/nepali_news_agent/: main.py  tools.py
src/: __init__.py  agent_utils.py
