[project]
name = "antigravity-sdk"
version = "0.1.0"
description = "Learning lab for the Google Antigravity SDK with examples and projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "google-antigravity>=0.1.0",
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
]
